Fixed scrollbar height

--- a/app/static/styles/chat-dark.css
+++ b/app/static/styles/chat-dark.css
@@ -34,7 +34,6 @@ html, body {
     cursor: move;
     border-bottom: 1px solid #000;
     border-top: 1px solid #333;
-    cursor: pointer;
     padding: 10px 5px;
     color: #BBB;
     background: #1a1a1a;
@@ -63,7 +62,7 @@ html, body {
     height: 100%;
     position: absolute;
     top: 0;
-    left: 0%;
+    left: 0;
 }
 
 .chatEntry {
@@ -107,6 +106,7 @@ html, body {
 }
 .chatMessages::-webkit-scrollbar {
     width: 7px;
+    height: 7px;
 }
 .chatMessages::-webkit-scrollbar-track {
     background-color: #565555;
